--- a/responsive/index.html
+++ b/responsive/index.html
@@ -14,7 +14,9 @@
                 <header>
                     <div class="header-container">
                     <div class="left">
-                        <h3>Projection</h3>
+                        <a href="#">
+                            <h3>Projection</h3>
+                        </a>
                     </div>
                     <div class="right">
                         <div class="nav-desktop">
@@ -27,9 +29,6 @@
                                 <i class="fas fa-bars"></i>
                         </div>
                     </div>
-                </header>
-
-                <section>
                     <div class="banner">
                         <h1>Welcome to Projection</h1>
                         <div class="banner-highlights">
@@ -51,32 +50,30 @@
                         </div>
                         <button class="my-button">Get Started</button>
                     </div>
-                </section>
+                </header>
             </div>
         </div>
 
         <section>
-            <div class="wrapper">
-                <div class="content">
-                    <div class="two-columns">
-                        <div class="first">
-                            <img src="assets/images/pic01.jpg" alt="Picture 1">
-                            <h3>Lorem ipsum dolor sit amet consectetur</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum laborum fuga vel, ipsam corporis placeat! Doloremque nihil quasi eligendi. Tempore animi sint laudantium debitis vero quis ipsum ullam nisi?Aperiam dolore dolores, fugiat, voluptatem</p>
-                            <button class="my-button">Learn More</button>
-                        </div>
-                        <div class="second">
-                            <img src="assets/images/pic02.jpg" alt="Picture 2">
-                            <h3>Lorem ipsum dolor sit amet consectetur</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum laborum fuga vel, ipsam corporis placeat! Doloremque nihil quasi eligendi. Tempore animi sint laudantium debitis vero quis ipsum ullam nisi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab exercitationem doloremque omnis maxime? </p>
-                            <button class="my-button">Learn More</button>
-                        </div>
+            <div class="wrapper content">
+                <div class="two-columns">
+                    <div class="first">
+                        <img src="assets/images/pic01.jpg" alt="Picture 1">
+                        <h3>Lorem ipsum dolor sit amet consectetur</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum laborum fuga vel, ipsam corporis placeat! Doloremque nihil quasi eligendi. Tempore animi sint laudantium debitis vero quis ipsum ullam nisi?Aperiam dolore dolores, fugiat, voluptatem</p>
+                        <button class="my-button">Learn More</button>
+                    </div>
+                    <div class="second">
+                        <img src="assets/images/pic02.jpg" alt="Picture 2">
+                        <h3>Lorem ipsum dolor sit amet consectetur</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores rerum laborum fuga vel, ipsam corporis placeat! Doloremque nihil quasi eligendi. Tempore animi sint laudantium debitis vero quis ipsum ullam nisi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab exercitationem doloremque omnis maxime? </p>
+                        <button class="my-button">Learn More</button>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section>
+        <footer>
             <div class="contact-us">
                 <div class="wrapper">
                     <h3>Get in touch</h3>
@@ -106,9 +103,6 @@
 
                 </div>
             </div>
-        </section>
-
-        <footer>
             <div class="footer">
                 TO THE NEW &copy; 2019
             </div>
