reverted back to div method in image grid

--- a/introduction_to_css/ex3/index.html
+++ b/introduction_to_css/ex3/index.html
@@ -36,21 +36,19 @@
                     <p>The first edition of GeekCombat was co-sponsored by CarDekho, Daffodil Software and #fame. The 2-day hackathon witnessed over 300 participants from various companies including Sapient, TCS, Daffodil Software, Xebia, RBS, Girnar Software and Wipro. GeekCombat focused on Smarter India theme also served as a collaborative platform to learn and network.</p>
                 </div>
                 <div class="row">
-                    <table>
-                        <tr>
-                            <td class="main-img" rowspan="2">
-                                <img src="images/01.png" alt="Picture 1">
-                            </td>
-                            <td class="two-imgs">
-                                <img src="images/02.png" alt="Picture 2">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="two-imgs">
-                                <img src="images/03.png" alt="Picture 03">
-                            </td>
-                        </tr>
-                    </table>
+                    <div class="two-columns">
+                        <div class="first">
+                            <img src="images/01.png" alt="GeekCombat01">
+                        </div>
+                        <div class="second">
+                            <div class="img-div">
+                                <img src="images/02.png" alt="GeekCombat02">
+                            </div>
+                            <div class="img-div">
+                                <img src="images/03.png" alt="GeekCombat03">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="two-columns">
