--- a/oojs/index.html
+++ b/oojs/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Object Oriented JavaScript Exercise</title>
-        <link rel="stylesheet" href="assets/reset.css">
-        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="assets/styles/reset.css">
+        <link rel="stylesheet" href="assets/styles/styles.css">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
@@ -14,11 +14,11 @@
             </header>
 
             <section class="col-10">
-                <a href="https://jsbin.com/haqabav/40/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/haqabav/41/edit?js,console" class="solution-button" target="_blank">
 Question 1
                 </a>
                 
-                <a href="https://jsbin.com/tovevam/4/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/tovevam/10/edit?js,console" class="solution-button" target="_blank">
 Question 2
                 </a>
 
@@ -34,7 +34,7 @@ Question 4
 Question 5
                 </a>
 
-                <a href="https://jsbin.com/junafe/edit?html,css,output" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/yuyamok/5/edit?js,console" class="solution-button" target="_blank">
 Question 6
                 </a>
             </section>
