updated in links

--- a/oojs/index.html
+++ b/oojs/index.html
@@ -14,27 +14,27 @@
             </header>
 
             <section class="col-10">
-                <a href="https://jsbin.com/haqabav/41/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/haqabav/edit?js,output" class="solution-button" target="_blank">
 Question 1
                 </a>
                 
-                <a href="https://jsbin.com/tovevam/10/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/tovevam/edit?js,console" class="solution-button" target="_blank">
 Question 2
                 </a>
 
-                <a href="https://jsbin.com/cilalos/8/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/cilalos/edit?js,console" class="solution-button" target="_blank">
 Question 3
                 </a>
 
-                <a href="https://jsbin.com/zajinax/9/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/zajinax/edit?js,console" class="solution-button" target="_blank">
 Question 4
                 </a>
 
-                <a href="https://jsbin.com/yokajus/5/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/yokajus/edit?js,console" class="solution-button" target="_blank">
 Question 5
                 </a>
 
-                <a href="https://jsbin.com/yuyamok/5/edit?js,console" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/yuyamok/edit?js,console" class="solution-button" target="_blank">
 Question 6
                 </a>
             </section>
