--- a/es6-2/index.html
+++ b/es6-2/index.html
@@ -18,7 +18,7 @@
 Question 1
                 </a>
                 
-                <a href="#" class="solution-button" target="_blank">
+                <a href="https://jsbin.com/porupo/edit?js,output" class="solution-button" target="_blank">
 Question 2
                 </a>
 
